--- a/nuestra-filosofia-2/index.htm
+++ b/nuestra-filosofia-2/index.htm
@@ -726,7 +726,7 @@ add_filter ("wp_mail_from","ejr_email_desde");
                     <div class="footer-logo space-bottom-small">
                         <h2><span data-type="group" data-dynamic-mod="true">Estructuras General Arahalenses</span></h2>
                     </div>
-                    <p class="copyright">&copy;&nbsp;&nbsp;2020&nbsp;Estructuras General Arahalenses.&nbsp;Construido utilizando WordPress y el <a target="_blank" href="https://extendthemes.com/go/built-with-highlight/" class="mesmerize-theme-link">Highlight Theme</a></p>                        <div data-type="group" data-dynamic-mod="true" class="footer-social-icons">
+                    <p class="copyright">&copy;&nbsp;&nbsp;2020&nbsp;Estructuras General Arahalenses.&nbsp;</a></p>                        <div data-type="group" data-dynamic-mod="true" class="footer-social-icons">
         
     </div>
 
