--- a/contacto-2/index.htm
+++ b/contacto-2/index.htm
@@ -444,7 +444,7 @@ add_filter ("wp_mail_from","ejr_email_desde");
 	        <div class="logo_col col-xs col-sm-fit">
 	            <a href="..\index.htm" class="custom-logo-link" data-type="group" data-dynamic-mod="true" rel="home"><img width="499" height="125" src="..\wp-content\uploads\2020\08\cropped-Sin-titulo-1.png" class="custom-logo" alt="Estructuras General Arahalenses" srcset="..\wp-content\uploads\2020\08\cropped-Sin-titulo-1.png 499w, ..\wp-content\uploads\2020\08\cropped-Sin-titulo-1-300x75.png 300w" sizes="(max-width: 499px) 100vw, 499px"></a>	        </div>
 	        <div class="main_menu_col col-xs">
-	            <div id="mainmenu_container" class="row"><ul id="main_menu" class="active-line-bottom main-menu dropdown-menu"><li id="menu-item-24" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-24"><a href="..\index.htm">Inicio</a></li>
+	            <div id="mainmenu_container" class="row"><ul id="main_menu" class="active-line-bottom main-menu dropdown-menu"><li id="menu-item-24" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-24"><a href="..\index.html">Inicio</a></li>
 <li id="menu-item-200" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-200"><a href="..\nuestra-filosofia-2\index.htm">Nuestra Filosofía</a></li>
 <li id="menu-item-294" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-294"><a href="..\proyectos-realizados\index.htm">Proyectos &#038; Linea de Negocios</a>
 <ul class="sub-menu">
