--- a/contacto-2/index.htm
+++ b/contacto-2/index.htm
@@ -465,7 +465,7 @@ add_filter ("wp_mail_from","ejr_email_desde");
             <div class="logo-holder">
                 <a href="..\index.htm" class="custom-logo-link" data-type="group" data-dynamic-mod="true" rel="home"><img width="499" height="125" src="..\wp-content\uploads\2020\08\cropped-Sin-titulo-1.png" class="custom-logo" alt="Estructuras General Arahalenses" srcset="..\wp-content\uploads\2020\08\cropped-Sin-titulo-1.png 499w, ..\wp-content\uploads\2020\08\cropped-Sin-titulo-1-300x75.png 300w" sizes="(max-width: 499px) 100vw, 499px"></a>            </div>
         </div>
-        <div id="offcanvas-menu" class="menu-principal-container"><ul id="offcanvas_menu" class="offcanvas_menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-24"><a href="..\index.htm">Inicio</a></li>
+        <div id="offcanvas-menu" class="menu-principal-container"><ul id="offcanvas_menu" class="offcanvas_menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-24"><a href="..\index.html">Inicio</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-200"><a href="..\nuestra-filosofia-2\index.htm">Nuestra Filosofía</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-294"><a href="..\proyectos-realizados\index.htm">Proyectos &#038; Linea de Negocios</a>
 <ul class="sub-menu">
@@ -654,7 +654,7 @@ add_filter ("wp_mail_from","ejr_email_desde");
                         <div class="col-sm-4">
                             <div id="pages-4" class="widget widget_pages"><h4 class="widgettitle">Páginas</h4>
 			<ul>
-				<li class="page_item page-item-15"><a href="..\index.htm">Inicio</a></li>
+				<li class="page_item page-item-15"><a href="..\index.html">Inicio</a></li>
 <li class="page_item page-item-151"><a href="..\nuestra-filosofia-2\index.htm">Nuestra Filosofía</a></li>
 <li class="page_item page-item-264"><a href="..\proyectos-realizados\index.htm">Proyectos &#038; Linea de Negocios</a></li>
 <li class="page_item page-item-130 current_page_item"><a href="index.htm" aria-current="page">Contacto</a></li>
